--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "acme",
   "version": "0.1.0",
-  "private":"true",
+  "private": "true",
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
@@ -10,5 +10,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
+  },
+  "dependencies": {
+    "next": "^15.1.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
